[project]
name = "plonecli"
version = "8.0.0a1"
description = "A Plone CLI for creating Plone packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Maik Derstappen", email = "md@derico.de" }]
keywords = ["plone", "cli", "copier", "scaffolding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Framework :: Plone",
    "Framework :: Plone :: 6.0",
    "Framework :: Plone :: 6.1",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["Click>=8.0", "click-aliases", "copier>=9.0.0"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "myst-parser"]
dev = ["tox", "ruff"]

[project.scripts]
plonecli = "plonecli.cli:cli"

[project.urls]
Homepage = "https://github.com/plone/plonecli"
Repository = "https://github.com/plone/plonecli.git"
Issues = "https://github.com/plone/plonecli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plonecli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["plonecli"]
