[metadata]
name = plonecli
version = 0.2.2
description = A Plone CLI for creating Plone packages
long_description = file: README.rst, CHANGES.rst
keywords = plone cli bobtemplates mrbob zopeskel development
author = Maik Derstappen
author_email = md@derico.de
url = https://github.com/plone/plonecli
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Environment :: Console
    Framework :: Plone
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,tmp,tmpdist,local,lib,build,bin,dist,include,man
ignore =
    T001

[aliases]
test = pytest
# Define setup.py command aliases here

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip =
    __init__.py

skip =
