[metadata]
name = plonecli
version = 7.0a1
description = A Plone CLI for creating Plone packages
long_description = file: README.rst, CHANGES.rst
keywords = plone cli bobtemplates mrbob zopeskel development
author = Maik Derstappen
author_email = md@derico.de
url = https://github.com/plone/plonecli
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Environment :: Console
    Framework :: Plone
    Framework :: Plone :: 6.0
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,tmp,tmpdist,local,lib,build,bin,dist,include,man
ignore =  W503, C812, E501, T001  # E203, E266
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B

[aliases]
test = pytest
# Define setup.py command aliases here

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
profile = plone
multi_line_output = 3

force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
# not_skip =
#    __init__.py

skip =
